src/test/deca/context/invalid/objet/field_protected_access_notsub.deca
// The selected class is not a subclass of the class where the selection was made
// Description : Try to access a protected field outside a subclass
// Result : error line 12

class A {
    protected int x;
}


{
    A a = new A();
    print(a.x);
}
